# Project_HSE_chrckers

chekers/: CMakeLists.txt  main.cpp
chekers/Board/: board.cpp  board.hpp
chekers/Piece/: piece.hpp
